A commit to read and write from a CSV file